update service worker

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <noscript>
       <strong>We're sorry but doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <h1>
-      PWA Sample V2
-    </h1>
+    <div style="text-align: center;">
+      <h1>
+        PWA Sample V2
+      </h1>
+      <br>
+      <div id="target"></div>
+    </div> 
     <script src="/index.js"></script>
   </body>
 </html>
