update all worker

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-messaging.js"></script>
     <title>PWA Sample V2</title>
   </head>
   <body>
@@ -17,7 +19,7 @@
         PWA Sample V2
       </h1>
       <br>
-      <div id="target"></div>
+      <div id="target" style="text-align: left; word-break: break-all; font-family: 'Courier New', Courier, monospace;"></div>
     </div> 
     <script src="/index.js"></script>
   </body>
